--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <a href="#" class="logo" >Aditya</a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <!--<div class="bx bx-menu" id="menu-icon"></div> -->
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -70,7 +70,7 @@
                     controls poster="./img/about.jpg">
                     <source src= "./img/video.mp4" type="video/mp4">
                 </video> -->
-                <img src ="./img/about.jpg" width="400" height="350" />
+                <img src ="./img/about.jpg" width="275" height="350" />
             </div>
             <div class="about-text">
                 <p>Currenty I am pursuing my degree in Computer Science and Engineering from Walchand College of Engineering, Sangli. I have confidence in web designing.</p>
