--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src ="./img/about.jpg" width="275" height="350" />
             </div>
             <div class="about-text">
-                <p>Currenty I am pursuing my degree in Computer Science and Engineering from Walchand College of Engineering, Sangli. I have confidence in web designing.</p>
+                <p>Currently I am pursuing my degree in Computer Science and Engineering from Walchand College of Engineering, Sangli. I have confidence in web designing.</p>
                 <div class="information">
                     
                     <div class="info-box">
